<resources>
    <string name="app_name">GG Lounge</string>
    <string name="textview2">Welcome</string>
    <string name="most_popular">Most Popular</string>
    <string name="onbord1">to</string>
    <string name="onbord1_welcome">Welcome</string>
    <string name="onbord1_gg">GG</string>
    <string name="onbord1_lounge">LOUNGE</string>
    <string name="onbord1_next">Next -></string>
    <string name="onbord2_select">Select your favourite game</string>
    <string name="onbord2_description">We have different games like pool, VR games in our game center.</string>
    <string name="onbord3_book">Book</string>
    <string name="onbord3_gameSession">A Game Session Easily</string>
    <string name="onbord3_discription">You can simply plan your next playing time</string>
    <string name="onbord3_bnt">Get started</string>
    <string name="home_hi">Hi ,</string>
    <string name="home_name">Kisara</string>
    <string name="home_hint">Search for a game ...</string>
    <string name="home_gameLib">Game Library</string>
    <string name="home_view">View All</string>
    <string name="home_btn2">Latest</string>
    <string name="home_btn3">Favourite</string>
    <string name="home_game1">Pool</string>
    <string name="home_game2">VR</string>
    <string name="profile_name">Chathuka Kisara</string>
    <string name="profile_address">Mathugama</string>
    <string name="profile_5">5</string>
    <string name="profile_card1">Total Bookings</string>
    <string name="profile_1">1</string>
    <string name="profile_card2">Booking for this week</string>
    <string name="profile_3">3</string>
    <string name="profile_card3">Different Games</string>
    <string name="profile_card4">Best in pool Game</string>
    <string name="profile_setting1">Security</string>
    <string name="profile_setting2">Notification</string>
    <string name="profile_setting3">Privacy</string>
    <string name="profile_setting4">Terms and Policies</string>
    <string name="profile_setting5"><![CDATA[Help & Support]]></string>
    <string name="profile_setting6">Logout</string>
    <string name="Vr_name">Virtual Reality Games</string>
    <string name="vr_price">Price</string>
    <string name="vr_currency">RS</string>
    <string name="vr_amount">500</string>
    <string name="vr_overview">Overview</string>
    <string name="vr_duration">1 Hour</string>
    <string name="vr_rating">4.8</string>
    <string name="vr_details">Details</string>
    <string name="vr_discription">VR games use virtual reality technology to transport players into immersive virtual worlds where they can interact with environments and characters using motion controllers or gestures,providing a highly engaging realistic gaming experience.</string>
    <string name="vr_bookBtn">Book Now</string>
    <string name="booking_topic">Complete Booking</string>
    <string name="booking_catagory1"><![CDATA[Date & Time]]></string>
    <string name="booking_time">AM</string>
    <string name="Booking_time1">9.00 : 10.00</string>
    <string name="Booking_time2">10.00 : 10.30</string>
    <string name="Booking_time3">10.30 : 11.00</string>
    <string name="Booking_time4">11.00 : 11.30</string>
    <string name="Booking_time5">12.00 : 12.30</string>
    <string name="Booking_time6">1.00 : 1.30</string>
    <string name="booking_month">March</string>
    <string name="Booking_Year">2024</string>
    <string name="Booking_date1">WEN 20</string>
    <string name="Booking_date2">THU 21</string>
    <string name="Booking_date3">FRI 22</string>
    <string name="Booking_date4">SAT 23</string>
    <string name="Booking_date5">SUN 24</string>
    <string name="Booking_date6">MON 25</string>
    <string name="booking_topic2">Special Request</string>
    <string name="booking_req_hint">I request to ...</string>
    <string name="booking_btnName">Pay Now</string>
    <string name="booking_price">Rs500</string>

</resources>